--- a/src/app/gags/components/culture-choice/culture-choice.component.html
+++ b/src/app/gags/components/culture-choice/culture-choice.component.html
@@ -1,12 +1,15 @@
-<!-- culture-popup.component.html -->
- fgfgggggggggggggggg
-<div class="culture-popup-overlay" *ngIf="showPopup">
-    <div class="culture-popup">
-      <h2>Select Your Culture</h2>
-      <div class="culture-options">
-        <button *ngFor="let culture of cultures" (click)="selectCulture(culture)">
-          {{ culture }}
-        </button>
-      </div>
+<!-- culture-choice.component.html -->
+<div class="modal-container">
+    <div class="modal-header">
+      <h2>Choix de culture ?</h2>
+      <span class="close-icon" (click)="closeModal()">×</span>
     </div>
-  </div>
+    <mat-radio-group [(ngModel)]="selectedCulture" class="culture-radio-group">
+      <mat-radio-button *ngFor="let culture of cultures" [value]="culture.code" class="culture-radio-button">
+        {{ culture.name }}
+      </mat-radio-button>
+    </mat-radio-group>
+    <div class="modal-actions">
+      <button mat-button (click)="saveCulture()" class="save-button" [disabled]="!selectedCulture">Save</button>
+    </div>
+</div>
