--- a/src/app/gags/components/mainPageComponent/gags.component.html
+++ b/src/app/gags/components/mainPageComponent/gags.component.html
@@ -26,7 +26,7 @@
                     <div class="section__head">
                         <a href="single_post.html" class="imageUser">
                             <div>
-                                <img  src="assets/images/users/userClassic.png" alt="">
+                                <img  [src]="userImageSrc" alt="" class="rounded-circle" width="31"/>
                             </div>                             
                         </a>
                         <div  class="detail_header">
