--- a/src/app/layouts/full/full.component.html
+++ b/src/app/layouts/full/full.component.html
@@ -40,7 +40,7 @@
         text-transform: uppercase;
         letter-spacing: 4px;
         text-align: center;
-        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3); /* Shadow effect */">Juristi</span>
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3); /* Shadow effect */">BlagZ</span>
         <!-- ============================================================== -->
         <!-- End Logo -->
         <!-- ============================================================== -->
@@ -114,8 +114,7 @@
     <!-- footer -->
     <!-- ============================================================== -->
     <footer class="footer text-center">
-      All Rights Reserved by Xtreme Admin. Designed and Developed by
-      <a href="https://wrappixel.com">WrapPixel</a>.
+
     </footer>
     <!-- ============================================================== -->
     <!-- End footer -->
