--- a/src/app/authentification/authentification.component.html
+++ b/src/app/authentification/authentification.component.html
@@ -1,50 +1,50 @@
 <div class="auth-container">
-  <h2>{{ isLoginMode ? 'Login' : 'Register' }}</h2>
+  <h2>{{ isLoginMode ? 'Se connecter' : 'Inscription' }}</h2>
 
   <!-- Toggle between Login and Register -->
   <div class="toggle-mode">
     <button class="toggle-button" (click)="toggleMode()">
-      {{ isLoginMode ? 'Create an account' : 'Already have an account? Login' }}
+      {{ isLoginMode ? 'Inscription' : 'Se connecter' }}
     </button>
   </div>
 
   <!-- Login Form -->
   <form *ngIf="isLoginMode" (ngSubmit)="onSubmit(loginForm)" #loginForm="ngForm">
     <div class="form-group">
-      <label for="username">Username</label>
+      <label for="username">login</label>
       <input type="text" id="username" [(ngModel)]="username" name="username" required>
     </div>
     <div class="form-group">
-      <label for="password">Password</label>
+      <label for="password">mot de passe</label>
       <input type="password" id="password" [(ngModel)]="password" name="password" required>
     </div>
     <div *ngIf="errorMessage" class="error-message">
       {{ errorMessage }}
     </div>
     <div class="form-group">
-      <button type="submit" class="btn btn-primary">Login</button>
+      <button type="submit" class="btn btn-primary">Connexion</button>
     </div>
   </form>
 
   <!-- Registration Form -->
   <form *ngIf="!isLoginMode" (ngSubmit)="onSubmit(registerForm)" #registerForm="ngForm">
     <div class="form-group">
-      <label for="username">Username</label>
+      <label for="username">Login</label>
       <input type="text" id="username" [(ngModel)]="username" name="username" required>
     </div>
     <div class="form-group">
-      <label for="password">Password</label>
+      <label for="password">mot de passe</label>
       <input type="password" id="password" [(ngModel)]="password" name="password" required>
     </div>
     <div class="form-group">
-      <label for="confirmPassword">Confirm Password</label>
+      <label for="confirmPassword">confirmer mot de passe</label>
       <input type="password" id="confirmPassword" [(ngModel)]="confirmPassword" name="confirmPassword" required>
     </div>
     <div *ngIf="errorMessage" class="error-message">
       {{ errorMessage }}
     </div>
     <div class="form-group">
-      <button type="submit" class="btn btn-primary">Register</button>
+      <button type="submit" class="btn btn-primary">Creer votre compte</button>
     </div>
   </form>
 </div>
