--- a/src/app/shared/sidebar/sidebar.component.scss
+++ b/src/app/shared/sidebar/sidebar.component.scss
@@ -12,7 +12,7 @@
   .filter-toggle-button {
     width: 100%;
     padding: 10px;
-    background-color: #666;
+    background-color: #4B4F55;
     color: white;
     border: none;
     border-radius: 4px;
@@ -51,7 +51,7 @@
     font-size: 1.1rem;
     font-weight: 600;
     margin-bottom: 10px;
-    color: #555;
+    color: #4B4F55;
     text-align: center; /* Center the filter label */
   }
   
