--- a/src/app/gags/components/mainPageComponent/gags.component.html
+++ b/src/app/gags/components/mainPageComponent/gags.component.html
@@ -38,8 +38,11 @@
                                     @{{gag.createur_name}}
                                 </a>           
                             </div>
-                            <div class="section_hours">AAAAA</div>
+                            <div class="section_hours">{{gag.creation_dateTime}}</div>                          
                         </div>
+                        <button *ngIf="isAbleToDelete()" class="delete-button" (click)="deleteJoke(gag.id)">
+                            X
+                        </button>
                     </div>
                     <div class="mainGagContainer">
                         <div id="title" *ngIf="gag.titreGag!==''">
@@ -66,7 +69,7 @@
                     </div>
 
                     
-                    <div class="section_footer">
+                    <!--div class="section_footer">
                         <div id=interaction> 
                             <div *ngIf="isGagAlreadyLiked(gag)===1" class="footerIcons">
                                 <button id="like" href="#" class="btn btn-default" disabled>
@@ -97,7 +100,7 @@
                                 <i class="fa fa-comment-alt" aria-hidden="true"></i>
                             </button>
                         </div>
-                    </div>
+                    </div-->
                                         
                 </div>                        
             </div>
@@ -106,7 +109,9 @@
 
         <!-- Load More Button -->
         <div *ngIf="!loading && currentPage < totalPages - 1">
-            <button id="buttonMoreJokes" class="btn btn-default" (click)="loadMore()">Load More</button>
+            <button id="buttonMoreJokes" class="btn btn-default" (click)="loadMore()">
+                <i class="fa fa-chevron-down" aria-hidden="true"></i>
+            </button>
         </div>
     </div>
 
