--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <div class="sidebar">
     <!-- Filter Button -->
     <button class="filter-toggle-button" (click)="navigateToAddGag()">
-      Ajouter une blague
+       + Ajouter une blague
     </button>
     <button class="filter-toggle-button">
       Themes 
